# distribute-algo

./: data.py  distribute.py  pyproject.toml  test_distribute.py
