[tool.poetry]
name = "distribution-algo"
version = "0.1.0"
description = ""
authors = ["arjansunar <arjan.gahatrajsunar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
